--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello Contacts I have been messing</p>
+    <p>Hello Contacts</p>
 </body>
 </html>
