--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world </p>
+    <p>Hello world some changes
+        
+    </p>
 </body>
 </html>
