--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world some changes
+    <p>Hello world some changes huhy
         
     </p>
 </body>
