--- a/home.html
+++ b/home.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world some changes
-        
-    </p>
+    <p>Hello world some changes the home </p>
+    <p>Hello home I am making somechanges</p>
 </body>
 </html>
